# alfg--mp4-rust

./: Cargo.toml
examples/: mp4dump.rs  mp4idx.rs  segmentserver.rs
src/: lib.rs  reader.rs
src/mp4box/: mod.rs  sidx.rs
tests/samples/: sidx.json
