[package]
name = "mp4"
version = "0.15.0-dev"
authors = ["Alf <alf.g.jr@gmail.com>"]
edition = "2024"
description = "MP4 reader and writer library in Rust."
documentation = "https://docs.rs/mp4"
readme = "README.md"
homepage = "https://github.com/alfg/mp4-rust"
repository = "https://github.com/alfg/mp4-rust"
keywords = ["mp4", "iso-mp4", "isobmff", "video", "multimedia"]
license = "MIT"
include = ["src", "benches", "Cargo.toml", "README", "LICENSE"]

[dependencies]
thiserror = "2.0.12"
byteorder = "1.5.0"
bytes = "1.10.1"
num-rational = { version = "0.4.2", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_main"
harness = false
